<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DatabaseActivity">

    <include layout="@layout/toolbar" />

    <EditText
        android:id="@+id/nameET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/defMargin"
        android:layout_marginTop="@dimen/defMargin"
        android:autofillHints=""
        android:hint="@string/nameET_hint"
        android:inputType="textPersonName"
        android:minWidth="@dimen/minWidthET"
        android:textSize="@dimen/textSize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <EditText
        android:id="@+id/phoneET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/defMargin"
        android:autofillHints=""
        android:hint="@string/phoneET_hint"
        android:inputType="phone"
        android:minWidth="@dimen/minWidthET"
        android:textSize="@dimen/textSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/nameET"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <TextView
        android:id="@+id/roleTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/defMargin"
        android:layout_marginTop="@dimen/defMargin"
        android:minWidth="@dimen/minWidthET"
        android:text="@string/roleTV_text"
        android:textSize="@dimen/textSize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameET" />

    <Spinner
        android:id="@+id/roleSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/defMargin"
        android:textSize="@dimen/textSize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/roleTV" />


    <Button
        android:id="@+id/addBTN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/defMargin"
        android:layout_marginTop="@dimen/defMargin"
        android:minWidth="@dimen/minWidthET"
        android:text="@string/addBTN_text"
        android:textSize="@dimen/textSize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/roleSpinner" />

    <Button
        android:id="@+id/readBTN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/defMargin"
        android:minWidth="@dimen/minWidthET"
        android:text="@string/readBTN_text"
        android:textSize="@dimen/textSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/addBTN"
        app:layout_constraintTop_toBottomOf="@+id/roleSpinner" />

    <Button
        android:id="@+id/delBTN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/defMargin"
        android:minWidth="@dimen/minWidthET"
        android:text="@string/delBTN_text"
        android:textSize="@dimen/textSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addBTN" />

    <TextView
        android:id="@+id/outputTV"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/defMargin"
        android:hint="@string/outputTV_hint"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/delBTN"
        android:padding="@dimen/defPadding"/>

</androidx.constraintlayout.widget.ConstraintLayout>